Add signup page link to ui index page

--- a/UI/index.html
+++ b/UI/index.html
@@ -35,7 +35,7 @@
 			<div class="wrapper-left">
 				<h1>Attend the most awaited Conference of 2019</h1>
 				<p>Questioner​​ helps the meetup organizer prioritize  questions to be answered. Other users can vote on asked questions and they bubble to the top  or bottom of the log </p>
-				<a href="#">Get started  <i class="fa fa-arrow-right" aria-hidden="true"></i> </a>
+				<a href="signup.html">Get started  <i class="fa fa-arrow-right" aria-hidden="true"></i> </a>
 			</div>
 			<div class="wrapper-right">
 				<img src="img/team.png">
