Add a link that redirect users back to index

--- a/UI/login.html
+++ b/UI/login.html
@@ -34,7 +34,7 @@
 						<button id="submit">Sign in  <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
 					</div>
 				</form>
-				<p align="center">Dont have an account yet ? <a href="signup.html">Signup  <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+				<p align="center">Dont have an account yet ? <a href="signup.html">Signup  <i class="fa fa-arrow-right" aria-hidden="true"></i></a> | <a href="index.html">Homp page  <i class="fa fa-home" aria-hidden="true"></i></a></p>
 			</div>
 		</div>
 		<div class ="banner-split right">
