implement responsiveness on signup footer section

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -40,7 +40,7 @@
 						<button id="submit">Sign up <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
 					</div>
 				</form>
-				<p align="center">Already have an account ? <a href="login.html"> sign in  <i class="fa fa-arrow-right" aria-hidden="true"></i></a> | <a href="index.html">Home page  <i class="fa fa-home" aria-hidden="true"></i></a></p>
+				<p class="footer-align">Already have an account ? <a href="login.html"> sign in  <i class="fa fa-arrow-right" aria-hidden="true"></i></a> | <a href="index.html">Goback <i class="fa fa-home" aria-hidden="true"></i></a></p>
 			</div>
 		</div>
 		<div class ="banner-split right">
