--- a/UI/signup.html
+++ b/UI/signup.html
@@ -48,6 +48,7 @@
 			<p>Crowd-source questions for a meetup. ​Questioner​​ helps the meetup organizer prioritize  questions to be answered. Other users can vote on asked questions and they bubble to the top  or bottom of the log. </p>
 		</div>
 	</div>
-	<script type="text/javascript" src="js/main.js"></script>
+	<!-- Keep javascript on hover effect for reference purpose -->
+	<!-- <script type="text/javascript" src="js/main.js"></script> -->
 </body>
 </html>
