--- a/UI/admin/delete-meetup.html
+++ b/UI/admin/delete-meetup.html
@@ -28,22 +28,39 @@
 			<div class="rightbar-btn">
 				<a href="login.html">Log Out</a>
 			</div>
-			<div class="meetup-container-section">
-				<img src="../img/post.png">
-				<h3>React summit</h3>
-				<p>The meeting of two personalities is like the contact of two chemical substances: If there is any reaction, both are transformed.</p>
+			<div class="delete-meetup-wrapper">
+				<div class="delete-meetup-record">
+				<div class="section-delete-record">
+					<p>created date : 28-09-2019 | created by : Lateef Ahmad</p>
+					<h4>Meetup title : React summit 2019</h4>
+					<p>React Summit is a community driven event aimed at bringing together frontend developers who use React/Javascript</p>
+				</div>
+				<div class="meetup-delete-button">
+					<button id="delete">Delete record</button>
+				</div>
 			</div>
-			<div class="meetup-container-section">
-				<img src="../img/post.png">
-				<h3>Developer fest</h3>
-				<p>Meet the people attending this event around the globe. This will be the best opportunity to meet and share wonderful experience.</p>
+			<div class="delete-meetup-record">
+				<div class="section-delete-record">
+					<p>created date : 28-09-2019 | created by : Lateef Ahmad</p>
+					<h4>Meetup title : React summit 2019</h4>
+					<p>React Summit is a community driven event aimed at bringing together frontend developers who use React/Javascript.</p>
+				</div>
+				<div class="meetup-delete-button">
+					<button id="delete">Delete record</button>
+				</div>
 			</div>
-			<div class="meetup-container-section">
-				<img src="../img/post.png">
-				<h3>Developer cycle</h3>
-				<p>Meet the people attending this event around the globe. This will be the best opportunity to meet and share wonderful experience.</p>
+			<div class="delete-meetup-record">
+				<div class="section-delete-record">
+					<p>created date : 28-09-2019 | created by : Lateef Ahmad</p>
+					<h4>Meetup title : React summit 2019</h4>
+					<p>React Summit is a community driven event aimed at bringing together frontend developers who use React/Javascript</p>
+				</div>
+				<div class="meetup-delete-button">
+					<button id="delete">Delete record</button>
+				</div>
 			</div>
 		</div>
+			</div>
 		<div class="clear"></div>
 		<p class="footer-bottom-flat">&copy;<script>document.write(new Date().getFullYear());</script> <a href="#">Crowd-source questions for a meetup </a></p>
 	</div>
