--- a/UI/questioners.html
+++ b/UI/questioners.html
@@ -43,7 +43,7 @@
 			</div>
 			<div class="specific-meetup">
 				<div class="created-by">
-					<p>Created By: Ahmad Lateef <i class="fa fa-admin" aria-hidden="true"></i></p>
+					<p>Created By: Ahmad Lateef | created date: 29-01-2018</p>
 				</div>
 				<img src="img/post.png">
 				<h3>React summit</h3>
