--- a/UI/questioners.html
+++ b/UI/questioners.html
@@ -45,48 +45,24 @@
 				<div class="created-by">
 					<p>Created By: Ahmad Lateef | created date: 29-01-2018</p>
 				</div>
-				<img src="img/post.png">
 				<h3>React summit</h3>
 				<p>React is having a huge impact on the way we think about Web UI development. Our Meetups are opportunity to learn why and share experiences. Meet the people attending this event around the globe. This will be the best opportunity to meet and share wonderful experience.</p>
 			</div>
 			<div class="specific-meetup-questions">
 				<h4><span class="questioner-username">Mentos</span> : Does meetup provides advancement for personal and professional growth? <br />202 <i class="fa fa-thumbs-up" aria-hidden="true"></i> | <i class="fa fa-thumbs-down" aria-hidden="true"></i> 2 | <i class="fa fa-comment" aria-hidden="true"></i> 7 </h4>
-				<!-- <span>comment <i class="fa fa-plus" aria-hidden="true"></i></span> -->
-				<div class="questioner-post-wrapper-comment">
-					Add a comment <span class="accordion" type="button"><i class="fa fa-plus" aria-hidden="true"></i></span>
-					<div class="questioner-form-field">
-						<form class="question-box" action="" method="post">
-							<textarea rows="4" cols="50">
-							</textarea> 
-							<input type="submit" name="" value="submit">
-						</form>
-					</div>	
-				</div>
-			</div><!-- 
-			<div class="specific-meetup-questions">
-				<h4> <span class="questioner-username">Vipercarder</span> : I am a very big fan of vue js, and i think there should be a meetup for vue js? <br />122 <i class="fa fa-thumbs-up" aria-hidden="true"></i> | <i class="fa fa-thumbs-down" aria-hidden="true"></i> 8 | <i class="fa fa-comment" aria-hidden="true"></i> 0</h4>
-				<span>comment <i class="fa fa-plus" aria-hidden="true"></i></span>
-
+				<form class="question-box" action="" method="post">
+				<textarea placeholder="Describe your comment here">
+				</textarea> 
+			</form>
 			</div>
-			<div class="specific-meetup-questions">
-				<h4><span class="questioner-username">Bluebird2000</span> : Is this platform only for javascript full stack? Any laravel developer here? <br />22 <i class="fa fa-thumbs-up" aria-hidden="true"></i> | <i class="fa fa-thumbs-down" aria-hidden="true"></i> 4 <i class="fa fa-comment" aria-hidden="true"></i> 1 </h4>
-				<span>comment <i class="fa fa-plus" aria-hidden="true"></i></span>
-
-			</div> -->
-			
 		</div>
 		<div class="questioner-post-wrapper">
-					Post a question <button class="accordion" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
-					<div class="questioner-form-field">
-						<form class="question-box" action="" method="post">
-							<!-- <input type="text" name="" placeholder="title"> -->
-							You can drop a question here inside the field box
-							<textarea rows="4" cols="50">
-								
-							</textarea> 
-							<input type="submit" name="" value="submit">
-						</form>
-					</div>	
+			Post a question 
+			<form class="question-box" action="" method="post">
+				<textarea rows="4" cols="50">
+					
+				</textarea> 
+			</form>
 		</div>
 		<div id="footer-bottom">
 			<p>&copy;<script>document.write(new Date().getFullYear());</script> <a href="#">Crowd-source questions for a meetup </a></p>
