#163043759 General implementation of UI feedback  (#17)
* Add signup page link to ui index page

* Add a link that redirect users back to index

* content typo fixed on users redirection back to index

* Add a link on signup page that redirect users back to index

* implement responsiveness on login footer section

* implement responsiveness on signup footer section

* Add create meetup link to admin index page

* implement login on hover effect with pure css

* implement signup on hover effect with pure css

* Add delete meetup link to admin pages and implement delete meetup page to project

* add back to top button to index using html anchor tag

* set cursor to pointer on user upvote and downvote

* Maintained consistency in post questions and comment ui page

* [finshes #163043759](https://www.pivotaltracker.com/story/show/163043759)

* [finshes #163043759](https://www.pivotaltracker.com/story/show/163043759)

* [#163043759](https://www.pivotaltracker.com/story/show/163043759)

* [#163043759](https://www.pivotaltracker.com/story/show/163043759) updated PR file

* [#163043759](https://www.pivotaltracker.com/story/show/163043759) updated PR file

*  [163043759](https://www.pivotaltracker.com/story/show/163043759) refactor UI feedback implementation

--- a/UI/login.html
+++ b/UI/login.html
@@ -34,7 +34,7 @@
 						<button id="submit">Sign in  <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
 					</div>
 				</form>
-				<p align="center">Dont have an account yet ? <a href="signup.html">Signup  <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+				<p class="footer-align">Dont have an account yet ? <a href="signup.html">Signup  <i class="fa fa-arrow-right" aria-hidden="true"></i></a> | <a href="index.html">Goback <i class="fa fa-arrow-left" aria-hidden="true"></i></a></p>
 			</div>
 		</div>
 		<div class ="banner-split right">
@@ -42,6 +42,7 @@
 			<p>Crowd-source questions for a meetup. ​Questioner​​ helps the meetup organizer prioritize  questions to be answered. Other users can vote on asked questions and they bubble to the top  or bottom of the log. </p>
 		</div>
 	</div>
-	<script type="text/javascript" src="js/main.js"></script>
+	<!-- Keep javascript on hover effect for reference purpose -->
+	<!-- <script type="text/javascript" src="js/main.js"></script> -->
 </body>
 </html>
