--- a/UI/signup.html
+++ b/UI/signup.html
@@ -40,7 +40,7 @@
 						<button id="submit">Sign up <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
 					</div>
 				</form>
-				<p align="center">Already have an account ? <a href="login.html">Signin <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+				<p class="footer-align">Already have an account ? <a href="login.html"> sign in  <i class="fa fa-arrow-right" aria-hidden="true"></i></a> | <a href="index.html">Goback <i class="fa fa-home" aria-hidden="true"></i></a></p>
 			</div>
 		</div>
 		<div class ="banner-split right">
@@ -48,6 +48,7 @@
 			<p>Crowd-source questions for a meetup. ​Questioner​​ helps the meetup organizer prioritize  questions to be answered. Other users can vote on asked questions and they bubble to the top  or bottom of the log. </p>
 		</div>
 	</div>
-	<script type="text/javascript" src="js/main.js"></script>
+	<!-- Keep javascript on hover effect for reference purpose -->
+	<!-- <script type="text/javascript" src="js/main.js"></script> -->
 </body>
 </html>
