clean unnecessary lines of code

--- a/UI/index.html
+++ b/UI/index.html
@@ -26,10 +26,11 @@
 				<div class="logo"><i class="fa fa-meetup" aria-hidden="true"></i>Questioner</div>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="questioners.html">Questioners</a></li>
+					<li><a href="meetup-single.html">Questioners</a></li>
 					<li><a href="meetup.html">Find Meetup</a></li>
-					<li><a href="feedback.html">Feedback</a></li>
-					<li class="active"><a href="login.html">Signin</a></li>
+					<li><a href="questions-feed.html">Top Feeds</a></li>
+					<li class="active"><a href="login.html">Sign in</a> <a href="admin/login.html">Admin</a> </li>
+
 				</ul>
 			</nav>
 			<div class="wrapper-left">
@@ -43,7 +44,7 @@
 		</div>
 	</header>
 	<div id="questioner-services">
-		<h1>What do you love?</h1>
+		<h1>Create an event with us?</h1>
 		<p class="meetup-content">
 			Dont just build a community, create a movement
 		</p>
