--- a/UI/meetup-single.html
+++ b/UI/meetup-single.html
@@ -17,9 +17,9 @@
 				<div class="logo"><i class="fa fa-meetup" aria-hidden="true"></i>Questioner</div>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="questioners.html">Questioners</a></li>
+					<li><a href="meetup-single.html">Questioners</a></li>
 					<li><a href="meetup.html">Find Meetup</a></li>
-					<li><a href="feedback.html">Feedback</a></li>
+					<li><a href="questions-feed.html.html">Top Feeds</a></li>
 					<li class="active"><a href="login.html">Signin</a></li>
 				</ul>
 			</nav>
