--- a/UI/questions-feed.html
+++ b/UI/questions-feed.html
@@ -33,69 +33,33 @@
 				</ul>
 			</nav>
 			<div class="wrapper-left">
-				<h1>Attend the most awaited Conference of 2019</h1>
+				<h1>Top questions feeds</h1>
+				
 				<p>Questioner​​ helps the meetup organizer prioritize  questions to be answered. Other users can vote on asked questions and they bubble to the top  or bottom of the log </p>
-				<a href="#">Get started  <i class="fa fa-arrow-right" aria-hidden="true"></i> </a>
 			</div>
 		</div>
 	</header>
 	</div>
 		<div id="all-meetup-section">
-		<h1>All Meetups</h1>
-		<p class="meetup-content">
-			Meet new people, share great times
-		</p>
-		<div class="all-section-meetup-wrapper">
-			<a href="meetup-single">
-				<div class="row">
-				<img src="img/meetup-logo.png">
-				<h4 class="title">Developer fest</h4>
+		<div class="feed-section">
+			<div class="qestions-feed-rows">
+				<div class="feed-created-by">
+					<p>Created By: Ahmad Lateef | created date: 29-01-2018</p>
 				</div>
-			</a>
-			<a href="meet-single.html">
-				<div class="row">
-					<img src="img/meetup-logo.png">
-					<h4 class="title">Open source community</h4>
-					
-				</div>
-			</a>
-			<a href="meetup-single.html">
-				<div class="row">
-					<img src="img/meetup-logo.png">
-					<h4 class="title">React summit</h4>
-				</div>
-			</a>
-			<a href="meetup-single.html">
-				<div class="row">
-					<img src="img/meetup-logo.png">
-					<h4 class="title">Facebook deveoper circle</h4>
-				</div>
-			</a>
-			<a href="meetup-single.html">
-				<div class="row">
-					<img src="img/meetup-logo.png">
-					<h4 class="title">Women in tech</h4>
-				</div>
-			</a>
-			<a href="meetup-single.html">
-				<div class="row">
-					<img src="img/meetup-logo.png">
-					<h4 class="title">Health & Wellness</h4>
-				</div>
-			</a>
-			<a href="meet-single.html">
-				<div class="row">
-					<img src="img/meetup-logo.png">
-					<h4 class="title">Hobbies & Crafts</h4>
-				</div>
-			</a>
-			<a href="meetup-single.html">
-				<div class="row">
-					<img src="img/meetup-logo.png">
-					<h4 class="title">Art & Culture</h4>
-				</div>
-			</a>
+				<p> Questioner​​ helps the meetup organizer prioritize  questions to be answered. Other users can vote on asked questions and they bubble to the top  or bottom of the log </p>
+				<h4><br />202 <i class="fa fa-thumbs-up" aria-hidden="true"></i> | <i class="fa fa-thumbs-down" aria-hidden="true"></i> 2 | <i class="fa fa-comment" aria-hidden="true"></i> 7 </h4>
+			</div>
 		</div>
+		<div class="feed-section">
+			<div class="qestions-feed-rows">
+				<div class="feed-created-by">
+					<p>Created By: Ahmad Lateef | created date: 29-01-2018</p>
+				</div>
+				<p> Questioner​​ helps the meetup organizer prioritize  questions to be answered. Other users can vote on asked questions and they bubble to the top  or bottom of the log </p>
+				<h4><br />202 <i class="fa fa-thumbs-up" aria-hidden="true"></i> | <i class="fa fa-thumbs-down" aria-hidden="true"></i> 2 | <i class="fa fa-comment" aria-hidden="true"></i> 7 </h4>
+			</div>
+		</div>
+
 	</div>
 	<div class="clear"></div>
 	<div id="footer-main">
