clean off unnessary code

--- a/UI/meetup-single.html
+++ b/UI/meetup-single.html
@@ -20,7 +20,7 @@
 					<li><a href="meetup-single.html">Questioners</a></li>
 					<li><a href="meetup.html">Find Meetup</a></li>
 					<li><a href="questions-feed.html.html">Top Feeds</a></li>
-					<li class="active"><a href="login.html">Signin</a></li>
+					<li class="active"><a href="login.html">Sign in</a> <a href="admin/login.html">Admin</a> </li>
 				</ul>
 			</nav>
 			<div class="wrapper-left">
