--- a/UI/meetup.html
+++ b/UI/meetup.html
@@ -46,53 +46,66 @@
 			Meet new people, share great times
 		</p>
 		<div class="all-section-meetup-wrapper">
-			<a href="meetup-single">
+			<a href="meetup-single.html">
 				<div class="row">
 				<img src="img/meetup-logo.png">
 				<h4 class="title">Developer fest</h4>
+					<h5>Happening On 09-21-2019</h5>
 				</div>
 			</a>
 			<a href="meet-single.html">
 				<div class="row">
 					<img src="img/meetup-logo.png">
 					<h4 class="title">Open source community</h4>
-					
+					<h5>Happening On 09-21-2019</h5>
 				</div>
 			</a>
 			<a href="meetup-single.html">
 				<div class="row">
 					<img src="img/meetup-logo.png">
 					<h4 class="title">React summit</h4>
+					<h5>Happening On 09-21-2019</h5>
+
 				</div>
 			</a>
 			<a href="meetup-single.html">
 				<div class="row">
 					<img src="img/meetup-logo.png">
 					<h4 class="title">Facebook deveoper circle</h4>
+					<h5>Happening On 09-21-2019</h5>
+
 				</div>
 			</a>
 			<a href="meetup-single.html">
 				<div class="row">
 					<img src="img/meetup-logo.png">
 					<h4 class="title">Women in tech</h4>
+					<h5>Happening On 09-21-2019</h5>
+
 				</div>
 			</a>
 			<a href="meetup-single.html">
 				<div class="row">
 					<img src="img/meetup-logo.png">
 					<h4 class="title">Health & Wellness</h4>
+					<h5>Happening On 09-21-2019</h5>
+
 				</div>
 			</a>
-			<a href="meet-single.html">
+			<a href="meetup-single.html">
 				<div class="row">
 					<img src="img/meetup-logo.png">
 					<h4 class="title">Hobbies & Crafts</h4>
+					<h5>Happening On 09-21-2019</h5>
+
 				</div>
 			</a>
 			<a href="meetup-single.html">
 				<div class="row">
 					<img src="img/meetup-logo.png">
 					<h4 class="title">Art & Culture</h4>
+					<h5>Happening On 09-21-2019</h5>
+
 				</div>
 			</a>
 		</div>
